font awesone   added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h2>Home of itbcafrica</h2>
+<div class="jumbotron text-center">
+<h1>Bienvenue a Agro Expert</h1>
+<h3>Club des experts en agro </h3>
+
+</div>
