--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,10 +11,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
       <ul>
-
-         <%= link_to 'Contact Us', new_contact_path %>
-          <%= link_to 'About us', about_path %>
-
-    </div>
-  </div>
-</nav>
+        <%= link_to 'Contact Us', new_contact_path ,class:'btn btn-default' %>
+        <%= link_to 'About us', about_path,class:'btn btn-info' %>
+        <% if current_user %>
+          <%=button_to 'Sign Out',destroy_user_session_path,methode::delete,class:'btn btn-primary navbar-btn'%>
+        <% else %>
+          <%= link_to 'Sign In', new_user_session_path ,class:'btn btn-primary'%>
+          <%= link_to 'Sign Up', new_user_registration_path ,class:'btn btn-secondary'%>
+        <% end %>
+      </div>
+    </nav>
