--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,19 @@
 <div class="row">
-  <div class="col-md-4 offset-md-4  ">
+  <div class="col-md-6 offset-md-3 text-center">
+    <% if params[:plan]=='1' %>
+      <h1>Pro Account</h1>
+      <p>Sign up for the pro account for 10Euro with full access</p>
+    <% else %>
+      <h1>Basic Account</h1>
+      <p>Sign for free and get basic access to the community</p>
+    <% end %>
+  </div>
+  <div class="col-md-6 offset-md-3 ">
     <h2>Sign up</h2>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="field form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:'form-control'%>
-      </div>
-      <div class="field form-group">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password",class:'form-control' %>
-      </div>
-      <div class="field form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password",class:'form-control' %>
-      </div>
-      <div class="actions mt-2 form-group">
-        <%= f.submit "Sign up",class:'btn btn-success' %>
-      </div>
+    <% if params[:plan]=='1' %>
+      <%= render 'pro_form' %>
+    <% else %>
+      <%= render 'basic_form' %>
     <% end %>
     <%= render "devise/shared/links" %>
   </div>
