--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -1,5 +1,7 @@
- <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+ <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html:{id: 'basic_form'}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+   <%=hidden_field_tag 'plan',params[:plan]%>
+
   <div class="field form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:'form-control'%>
@@ -7,7 +9,7 @@
   <div class="field form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password",class:'form-control' %>
   </div>
