--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,5 +1,6 @@
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+     <%=hidden_field_tag 'plan',params[:plan]%>
   <div class="field form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:'form-control'%>
@@ -29,6 +30,6 @@
     <%= select_year    nil, { start_year: Date.today.year, end_year: Date.today.year+15 }, { id: 'exp_year', class: 'form-control btm-space' } %>
   </div>
   <div class="actions mt-2 form-group">
-    <%= f.submit "Sign up",class:'btn btn-success' %>
+    <%= f.submit "Sign up",class:'btn btn-success',id:'form-submit-btn' %>
   </div>
 <% end %>
