--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,6 +1,6 @@
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-     <%=hidden_field_tag 'plan',params[:plan]%>
+  <%=hidden_field_tag 'plan',params[:plan]%>
   <div class="field form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:'form-control'%>
@@ -16,18 +16,18 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password",class:'form-control' %>
   </div>
-  <div class='form-group'>
-    <%= label_tag        :number, 'Card Number' %>
-    <%= text_field_tag :number, nil, class: 'form-control', placeholder: 'We accept Visa, MasterCard, AMEX and Discover' %>
+  <div class="form-group">
+    <%= label_tag :card_number, "Credit Card Number" %>
+    <%= text_field_tag :card_number, nil, name: nil, class: "form-control" %>
   </div>
-  <div class='form-group'>
-    <%= label_tag        :cvc, 'Security Code' %>
-    <%= text_field_tag :cvc, nil, class: 'form-control', placeholder: 'The code on the back of your card (CVC)' %>
+  <div class="form-group">
+    <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+    <%= text_field_tag :card_code, nil, name: nil, class: "form-control" %>
   </div>
-  <div class='form-group'>
-    <%= label_tag        :exp_month, 'Expiration Date' %>
-    <%= select_month   nil, { add_month_numbers: true }, { id: 'exp_month', class: 'form-control btm-space' } %>
-    <%= select_year    nil, { start_year: Date.today.year, end_year: Date.today.year+15 }, { id: 'exp_year', class: 'form-control btm-space' } %>
+  <div class="form-group">
+    <%= label_tag :card_month, "Card Expiration" %>
+    <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month"}%>
+    <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}%>
   </div>
   <div class="actions mt-2 form-group">
     <%= f.submit "Sign up",class:'btn btn-success',id:'form-submit-btn' %>
