--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 offset-md-3 text-center">
-    <% if params[:plan]=='1' %>
+    <% if params[:plan]=='prod_JyjsjOWeUecuvP' %>
       <h1>Pro Account</h1>
       <p>Sign up for the pro account for 10Euro with full access</p>
     <% else %>
@@ -10,7 +10,7 @@
   </div>
   <div class="col-md-6 offset-md-3 ">
     <h2>Sign up</h2>
-    <% if params[:plan]=='1' %>
+    <% if params[:plan]=='prod_JyjsjOWeUecuvP' %>
       <%= render 'pro_form' %>
     <% else %>
       <%= render 'basic_form' %>
