--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,8 @@
         <%= link_to 'Contact Us', new_contact_path ,class:'btn btn-default' %>
         <%= link_to 'About us', about_path,class:'btn btn-info' %>
         <% if current_user %>
-          <%=button_to 'Sign Out',destroy_user_session_path,methode::delete,class:'btn btn-primary navbar-btn'%>
+        <%= link_to 'logout', destroy_user_session_path, method: :delete,class:'btn btn-primary navbar-btn' %>
+
         <% else %>
           <%= link_to 'Sign In', new_user_session_path ,class:'btn btn-primary'%>
 
