--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
- <%= link_to 'Create your profile', new_user_profile_path(current_user,hello:'world'),class:'btn btn-default btn-lg d-grid' if current_user%>
+ <%= link_to 'Create your profile', new_user_profile_path(current_user),class:'btn btn-default btn-lg d-grid' if current_user%>
 
 <div class="container-fluid bg-light p-5  text-center">
   <h1>Bienvenue a Agro Expert</h1>
