--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,37 @@
- <%= link_to 'Create your profile', new_user_profile_path(current_user),class:'btn btn-default btn-lg d-grid' if current_user%>
-
-<div class="container-fluid bg-light p-5  text-center">
+<div class="container-fluid bg-light p-5 mt-4  text-center">
   <h1>Bienvenue a Agro Expert</h1>
   <h3>Club des experts en agro , en elevage et autres </h3>
 </div>
 <br/>
 <br/>
 <div class="row mt-4">
-
-  <div class="col-sm-5 col-md-6 text-center">
-    <h2 class="text-center">Basic Membership</h2>
-    <h4>Sign for free and get basic access to the community</h4>
-    <br/>
-
-    <%= link_to 'Sign up with Basic',new_user_registration_path(plan: @basic_plan.stripe_id),class:'btn btn-primary btn-lg d-grid' %>
-  </div>
-  <div class="col-sm-5 col-md-6 text-center">
-    <h2 class="text-center">Pro Membership</h2>
-
-    <h4>Sign up for the pro account for 10Euro with full access</h4>
- <br/>
-     <%= link_to 'Sign up pro',new_user_registration_path(plan: @pro_plan.stripe_id),class:'btn btn-success  btn-lg d-grid' %>
-  </div>
+  <% if user_signed_in? %>
+    <div class="col-md-6 p-5  bg-light border border-primary ">
+    <h2 class="text-center">Your Profile</h2>
+      <% if current_user.profile %>
+        <%= link_to 'Edit your profile', '#',class:'btn btn-primary btn-lg d-grid' %><br/>
+        <%= link_to 'View your profile', user_path(current_user),class:'btn btn-secondary btn-lg d-grid' %>
+      <% else %>
+        <%= link_to 'Create your profile', new_user_profile_path(current_user),class:'btn btn-default btn-lg d-grid' if current_user%>
+      <%end%>
+    </div>
+    <div class="col-md-5 p-5 offset-md-1 text-center  bg-light border border-primary">
+      <h2 class="text-center font-weight-bold ">The Community </h2>
+      <p class="font-weight-bold"> Visit the community to meet other developers , entrepreneurs, and investors!</p>
+      <%= link_to 'Visit the Community', '#',class:'btn btn-success btn-lg d-grid mt-4' %>
+    </div>
+  <% else %>
+    <div class="col-sm-5 col-md-6 text-center">
+      <h2 class="text-center">Basic Membership</h2>
+      <h4>Sign for free and get basic access to the community</h4>
+      <br/>
+      <%= link_to 'Sign up with Basic',new_user_registration_path(plan: @basic_plan.stripe_id),class:'btn btn-primary btn-lg d-grid' %>
+    </div>
+    <div class="col-sm-5 col-md-6 text-center">
+      <h2 class="text-center">Pro Membership</h2>
+      <h4>Sign up for the pro account for 10Euro with full access</h4>
+      <br/>
+      <%= link_to 'Sign up pro',new_user_registration_path(plan: @pro_plan.stripe_id),class:'btn btn-success  btn-lg d-grid' %>
+    </div>
+  <% end %>
 </div>
