--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <div class="col-md-6 p-5  bg-light border border-primary ">
     <h2 class="text-center">Your Profile</h2>
       <% if current_user.profile %>
-        <%= link_to 'Edit your profile', '#',class:'btn btn-primary btn-lg d-grid' %><br/>
+        <%= link_to 'Edit your profile', edit_user_profile_path(current_user),class:'btn btn-primary btn-lg d-grid' %><br/>
         <%= link_to 'View your profile', user_path(current_user),class:'btn btn-secondary btn-lg d-grid' %>
       <% else %>
         <%= link_to 'Create your profile', new_user_profile_path(current_user),class:'btn btn-default btn-lg d-grid' if current_user%>
