--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
     <div class="col-md-5 p-5 offset-md-1 text-center  bg-light border border-primary">
       <h2 class="text-center font-weight-bold ">The Community </h2>
       <p class="font-weight-bold"> Visit the community to meet other developers , entrepreneurs, and investors!</p>
-      <%= link_to 'Visit the Community', '#',class:'btn btn-success btn-lg d-grid mt-4' %>
+      <%= link_to 'Visit the Community', users_path,class:'btn btn-success btn-lg d-grid mt-4' %>
     </div>
   <% else %>
     <div class="col-sm-5 col-md-6 text-center">
