--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -12,7 +12,7 @@
 
 <div class="form-group">
 <%=f.label :job_title %>
-<%=f.select :job_title,['Developper','Entrepreneur','Investor'],{}, class: 'form-control'%>
+<%=f.select :job_title,['Developer','Entrepreneur','Investor'],{}, class: 'form-control'%>
 </div>
 
 <div class="form-group">
@@ -28,6 +28,11 @@
 <div class="form-group">
 <%=f.label :description %>
 <%=f.text_area :description, class: 'form-control'%>
+</div>
+
+<div class="form-group">
+<%=f.label :image,"Upload Profile Picture" %>
+<%=f.file_field :image, class: 'form-control'%>
 </div>
 <div class="form-group mt-3">
 
